language-server/src/tests/snapshots/gleam_language_server__tests__action__discard_unused_variable_triggered_at_variable.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn go() -> Nil {\n  let wibble = 0\n  Nil\n}"
---
----- BEFORE ACTION
pub fn go() -> Nil {
  let wibble = 0
      ↑         
  Nil
}


----- AFTER ACTION
pub fn go() -> Nil {
  let _wibble = 0
  Nil
}
