language-server/src/tests/snapshots/gleam_language_server__tests__action__expand_function_capture.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  wibble(_, 1)\n}"
---
----- BEFORE ACTION
pub fn main() {
  wibble(_, 1)
         ↑    
}


----- AFTER ACTION
pub fn main() {
  fn(value) { wibble(value, 1) }
}
