language-server/src/tests/snapshots/gleam_language_server__tests__action__expand_function_capture_2.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  wibble(1, _)\n}"
---
----- BEFORE ACTION
pub fn main() {
  wibble(1, _)
  ↑           
}


----- AFTER ACTION
pub fn main() {
  fn(value) { wibble(1, value) }
}
