language-server/src/tests/snapshots/gleam_language_server__tests__action__expand_function_capture_does_not_shadow_variables.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let value = 1\n  let value_2 = 2\n  wibble(value, _, value_2)\n}"
---
----- BEFORE ACTION
pub fn main() {
  let value = 1
  let value_2 = 2
  wibble(value, _, value_2)
  ↑                        
}


----- AFTER ACTION
pub fn main() {
  let value = 1
  let value_2 = 2
  fn(value_3) { wibble(value, value_3, value_2) }
}
