language-server/src/tests/snapshots/gleam_language_server__tests__action__expand_function_capture_in_pipeline.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  1 |> wibble(2, _) |> wobble\n}\n\nfn wibble(a, b) {\n  todo\n}\n\nfn wobble(i) {\n  todo\n}\n\n"
---
----- BEFORE ACTION
pub fn main() {
  1 |> wibble(2, _) |> wobble
       ↑                     
}

fn wibble(a, b) {
  todo
}

fn wobble(i) {
  todo
}



----- AFTER ACTION
pub fn main() {
  1 |> fn(int) { wibble(2, int) } |> wobble
}

fn wibble(a, b) {
  todo
}

fn wobble(i) {
  todo
}
