language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_anonymous_function_with_variable_capture_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let shorter = [1, 2, 3]\n  let longer = [4, 5, 6, 7, 8]\n  let offset = 5\n  list.map2(shorter, longer, fn(_left, right) { right + offset })\n}\n        "
---
----- BEFORE ACTION

pub fn main() {
  let shorter = [1, 2, 3]
  let longer = [4, 5, 6, 7, 8]
  let offset = 5
  list.map2(shorter, longer, fn(_left, right) { right + offset })
                             ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑ 
}
        


----- AFTER ACTION

pub fn main() {
  let shorter = [1, 2, 3]
  let longer = [4, 5, 6, 7, 8]
  let offset = 5
  list.map2(shorter, longer, fn(_left, right) { function(right, offset) })
}

fn function(right: Int, offset: Int) -> Int {
  right + offset
}
